--- a/deploy/index.html
+++ b/deploy/index.html
@@ -81,13 +81,28 @@
             <h5 class="card-title">
               <i class="bi bi-gear me-2"></i><span data-label="settingsTitle">Настройки</span>
             </h5>
-            <div class="mb-3">
-              <label for="padding-input" class="form-label">
-                <span data-label="paddingLinesLabel">Строки отступа</span>
-                <i class="bi bi-info-circle text-muted ms-1" data-bs-toggle="tooltip" data-label="paddingLinesTooltip" title="Количество пустых строк, добавляемых до и после списка поддерживающих в HTML выводе. Это контролирует расстояние в прокручивающихся титрах."></i>
-              </label>
-              <input type="number" class="form-control" id="padding-input" min="0" max="200" step="1" placeholder="0">
-              <div class="form-text" data-label="paddingDefaultText">По умолчанию: 0 (без отступа). Более высокие значения добавляют больше места до и после содержимого на HTML странице.</div>
+
+            <!-- HTML Page Settings Subsection -->
+            <div class="mb-4">
+              <h6 class="mb-3">
+                <i class="bi bi-filetype-html me-2"></i>Настройки HTML страницы
+              </h6>
+              <div class="mb-3">
+                <label for="padding-input" class="form-label">
+                  <span data-label="paddingLinesLabel">Строки отступа</span>
+                  <i class="bi bi-info-circle text-muted ms-1" data-bs-toggle="tooltip" data-label="paddingLinesTooltip" title="Количество пустых строк, добавляемых до и после списка поддерживающих в HTML выводе. Это контролирует расстояние в прокручивающихся титрах."></i>
+                </label>
+                <input type="number" class="form-control" id="padding-input" min="0" max="200" step="1" placeholder="0">
+                <div class="form-text" data-label="paddingDefaultText">По умолчанию: 0 (без отступа). Более высокие значения добавляют больше места до и после содержимого на HTML странице.</div>
+              </div>
+              <div class="mb-3">
+                <label for="animation-duration-input" class="form-label">
+                  <span>Длительность анимации (секунды)</span>
+                  <i class="bi bi-info-circle text-muted ms-1" data-bs-toggle="tooltip" title="Длительность прокрутки титров в HTML файле."></i>
+                </label>
+                <input type="number" class="form-control" id="animation-duration-input" min="1" max="300" step="1" placeholder="30">
+                <div class="form-text">По умолчанию: 30 секунд. Диапазон: 1-300 секунд.</div>
+              </div>
             </div>
           </div>
         </div>
