setting to change html template title

--- a/deploy/index.html
+++ b/deploy/index.html
@@ -88,6 +88,14 @@
                 <i class="bi bi-filetype-html me-2"></i>Настройки HTML страницы
               </h6>
               <div class="mb-3">
+                <label for="title-input" class="form-label">
+                  <span>Текст заголовка</span>
+                  <i class="bi bi-info-circle text-muted ms-1" data-bs-toggle="tooltip" title="Текст, отображаемый в верхней части HTML страницы с поддерживающими."></i>
+                </label>
+                <input type="text" class="form-control" id="title-input" placeholder="Спасибо!">
+                <div class="form-text">По умолчанию: Спасибо!</div>
+              </div>
+              <div class="mb-3">
                 <label for="padding-input" class="form-label">
                   <span data-label="paddingLinesLabel">Строки отступа</span>
                   <i class="bi bi-info-circle text-muted ms-1" data-bs-toggle="tooltip" data-label="paddingLinesTooltip" title="Количество пустых строк, добавляемых до и после списка поддерживающих в HTML выводе. Это контролирует расстояние в прокручивающихся титрах."></i>
