--- a/index.html
+++ b/index.html
@@ -129,6 +129,11 @@
                   <input type="number" class="form-control" id="animation-duration-input" min="1" max="300" step="1" placeholder="30">
                   <div class="form-text">По умолчанию: 30 секунд. Диапазон: 1-300 секунд.</div>
                 </div>
+                <div class="d-grid">
+                  <button id="reset-settings-btn" class="btn btn-outline-secondary">
+                    <i class="bi bi-arrow-counterclockwise me-2"></i>Сбросить настройки
+                  </button>
+                </div>
               </div>
             </div>
           </div>
